# hermes-plugin-tinyfish

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  plugin.yaml  pyproject.toml
.agents/: AGENTS.md
.agents/skills/hermes-compatibility-tester/: SKILL.md
.agents/skills/hermes-plugin-maintainer/: SKILL.md
.agents/skills/plugin-release-manager/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-release.yml  ci.yml  dependency-review.yml  prepare-release.yml  publish.yml  release.yml
docs/: roadmap.md
docs/operations/: compatibility-testing.md  oauth-hardening-compatibility-report.md  release.md  user-install-smoke-test.md
docs/reference/: hermes-extension-points.md  hermes-mcp-api-gap.md  tinyfish-integration.md
hermes_plugin_tinyfish/: __init__.py  browser_provider.py  config.py  credit_policy.py  health.py  normalize.py  provider.py  rest_client.py  setup_cli.py  tools.py
scripts/: prepare_release.py  validate_release.py
tests/: conftest.py  test_browser_provider.py  test_credit_policy.py  test_health.py  test_live.py  test_normalize.py  test_prepare_release.py  test_provider.py  test_register.py  test_rest_client.py  test_setup_cli.py  test_tools.py  test_validate_release.py  test_version.py
