[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "hermes-plugin-tinyfish"
version = "0.2.1"
description = "TinyFish Search, Fetch, and optional Browser provider plugin for Hermes Agent"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "gabeosx" }
]
keywords = ["hermes-agent", "tinyfish", "mcp", "web-search", "web-extraction", "browser"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
  "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/gabeosx/hermes-plugin-tinyfish"
Documentation = "https://github.com/gabeosx/hermes-plugin-tinyfish#readme"
Issues = "https://github.com/gabeosx/hermes-plugin-tinyfish/issues"
Changelog = "https://github.com/gabeosx/hermes-plugin-tinyfish/blob/main/CHANGELOG.md"

[project.entry-points."hermes_agent.plugins"]
web-tinyfish = "hermes_plugin_tinyfish"

[project.optional-dependencies]
dev = [
  "build>=1.5.1",
  "mypy>=2.2.0",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "tomli>=2.0; python_version < '3.11'",
]

[tool.hatch.build.targets.wheel]
packages = ["hermes_plugin_tinyfish"]
include = ["plugin.yaml"]

[tool.hatch.build.targets.sdist]
include = [
  "hermes_plugin_tinyfish",
  "tests",
  "scripts",
  "plugin.yaml",
  "__init__.py",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "SECURITY.md",
  "CONTRIBUTING.md",
  "CODE_OF_CONDUCT.md",
]

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = [".agents"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
explicit_package_bases = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
